Staging/iocl/templates/service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: iocl-service
  namespace: staging
spec:
  selector:
    app: iocl-app
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 8080
      # nodePort: 31000
  type: ClusterIP  #NodePort
